# smallProject

./: README.md
.github/workflows/: cicd.yml
nursesTimetable/: pyproject.toml
nursesTimetable/nursestimetable/: db.sqlite3  manage.py
nursesTimetable/nursestimetable/nursesscheduler/: asgi.py  settings.py  urls.py  wsgi.py
nursesTimetable/nursestimetable/timetable/: forms.py  models.py  serializers.py  urls.py  utils.py  views.py
nursesTimetable/nursestimetable/timetable/migrations/: 0001_initial.py  0002_nurse_junior.py
nursesTimetable/nursestimetable/timetable/static/styles/: calendar.css
nursesTimetable/nursestimetable/timetable/templates/: calendar.html  nurse_confirm_delete.html  nurse_input.html  nurse_list.html  off_days_form.html  schedule.html
nursesTimetable/nursestimetable/timetable/utils/: balance.py  calculate.py  common.py  shift.py
